[package]
name = "templo_engine"
version = "0.2.0"
edition = "2018"
description = "This crate is a template engine for Templo tool to insert arguments inside of text files."
homepage = "https://github.com/pultzlucas/templo-engine"
repository = "https://github.com/pultzlucas/templo-engine"
license = "MIT"
categories = ["template-engine", "text-processing"]
keywords = ["template", "template_engine", "templo", "engine"]
authors = ["pultzlucas"]

[dependencies]
regex = "1.5.4"
